--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,51 @@
 /*  your css code here. If applicable */
+body {
+  background-color: rgb(204, 204, 204);
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.playlist-container {
+  width: 90%;
+  margin: 20px auto;
+}
+
+h1, h2 {
+  font-family: Arial, sans-serif;
+}
+
+.playlist-box {
+  background-color: rgb(255, 255, 255);
+  padding: 15px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+ul {
+  padding: 0;
+  text-align: left;
+}
+
+ul li {
+  margin: 10px 0;
+}
+
+ul li a {
+  text-decoration-line: none;
+  color: black;
+}
+
+.player_one, .player_two {
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+.player_one video, .player_two audio {
+  width: 100%;
+  border-radius: 10px;
+}
